Fixed overlapping

--- a/style.css
+++ b/style.css
@@ -138,13 +138,14 @@ a:hover {
 #projects,
 #contact {
     position: relative;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    height: 100vh;
+
 }
 
 .content {
@@ -165,7 +166,7 @@ a:hover {
 
 #why .content .answer {
     font-size: 30px;
-    line-height: 50px;
+    line-height: 20px;
     color: red;
 }
 
@@ -211,7 +212,13 @@ a:hover {
     }
 
     #why .content {
-        padding: 96px 0;
+        padding: 96px 100px;
+    }
+
+    .answer {
+        font-size: 30px;
+        line-height: 50px;
+        color: red;
     }
 
 }
